my-nx-workspace/apps/movie-name-generator/k8s/overlays/dev/ingress.yaml
# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: movie-name-generator
# spec:
#   rules:
#     - host: movie-name-generator
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: movie-name-generator
#                 port: 
#                   number: 8080

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: movie-name-generator
spec:
  rules:
  - host: movie-name-generator
    http:
      paths:
      - path: /
        backend:
          serviceName: movie-name-generator
          servicePort: 8080
